# settings-app

./: CHANGELOG.md  CMakeLists.txt  README.md  SettingsIcon.qml  main.qml  papyros-settings.desktop  papyros-settings.pro  papyros-settings.qrc
cmake/: PapyrosSettings.cmake
data/: io.papyros.Settings.appdata.xml
modules/: CMakeLists.txt
modules/about/: metadata.json
modules/about/qml/: Main.qml
modules/appearance/: CMakeLists.txt  metadata.json
modules/appearance/qml/: Main.qml
modules/developer/: metadata.json
modules/developer/qml/: Main.qml
modules/display/: metadata.json
modules/display/qml/: Main.qml
modules/network/: metadata.json
modules/network/qml/: ConnectionListItem.qml  Main.qml
modules/sound/: metadata.json
modules/sound/qml/: Main.qml
modules/users/: metadata.json
modules/users/qml/: Main.qml  UserListItem.qml
plugins/appearance/: AppearancePage.qml
qml/: SettingsIcon.qml  main.qml
src/: CMakeLists.txt  main.cpp  module.cpp  module.h  modulemanager.cpp  modulemanager.h  papyros-settings.qrc
src/qml/: CategoryView.qml  ModuleContainer.qml  ModulePage.qml  ModuleView.qml  SettingsIcon.qml  Subheader.qml  main.qml
